Partial fix for decade:1167 et al: scrollbars all over the place- Remove body height and overflow:auto.

--- a/to.etc.domui/src/resources/themes/blue/style.theme.css
+++ b/to.etc.domui/src/resources/themes/blue/style.theme.css
@@ -1297,9 +1297,8 @@ li.ui-tab-err {
 body,html {
 /*	background: url(bg-body.png) repeat-x;  jal 20110218 This cannot be present when background-color is color-replaced. */
 	background-color: <%= bg_color %>;
-	height: 100%; /* vmijic - changed to 100% (was 90%). Is here a reason for 90%? We have problem with splitter otherwise... */
+/*	height: 100%; jal 20110221 Body height causes no end of problems with scrollbars. */
 	margin: 0px;
-	overflow: auto;
 }
 
 /*** IO hider overlay ***/
